--- a/Overlaps_myAnalysis.ipynb
+++ b/Overlaps_myAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b60c066a",
+   "id": "16c97337",
    "metadata": {},
    "source": [
     "# Overlaps and Edit Distance - An Analysis"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3642514",
+   "id": "1d9ce59d",
    "metadata": {},
    "source": [
     "\n",
@@ -23,8 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2f515ee7",
+   "execution_count": 16,
+   "id": "21800605",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a9734cfd",
+   "execution_count": 17,
+   "id": "25b1a72c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "764c0611",
+   "execution_count": 41,
+   "id": "bbe65971",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,8 +67,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c0a383f3",
+   "execution_count": 42,
+   "id": "358aa199",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,30 +83,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "724e9736",
+   "execution_count": 43,
+   "id": "4fb0b941",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of pattern: 16\n"
+     ]
+    }
+   ],
    "source": [
     "print ( 'Length of pattern:', len  ( x ) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6234370a",
+   "execution_count": 44,
+   "id": "3974c97b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of sequence: 800000\n"
+     ]
+    }
+   ],
    "source": [
     "print ( 'Length of sequence:', len ( y ) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "230f220c",
+   "execution_count": 45,
+   "id": "8366d71d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " ...\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "D1 = np.matrix ( D )\n",
     "\n",
@@ -117,18 +147,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "21c81923",
+   "execution_count": 46,
+   "id": "b80ead85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17, 800001)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.shape ( D )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "02accb97",
+   "execution_count": 47,
+   "id": "7ec9467b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,10 +180,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4aafc0a8",
+   "execution_count": 48,
+   "id": "04124a09",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  0  0 ...  0  0  0]\n",
+      " [ 1  0  0 ...  0  0  0]\n",
+      " [ 2  0  0 ...  0  0  0]\n",
+      " ...\n",
+      " [14  0  0 ...  0  0  0]\n",
+      " [15  0  0 ...  0  0  0]\n",
+      " [16  0  0 ...  0  0  0]]\n"
+     ]
+    }
+   ],
    "source": [
     "D1 = np.matrix ( D )\n",
     "\n",
@@ -153,34 +208,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "17ebb062",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for j in range ( len ( y ) + 1 ) :\n",
-    "        \n",
-    "    D [ 0 ] [ j ] = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e689081",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "D1 = np.matrix ( D )\n",
-    "\n",
-    "D1 = D1.view ( )\n",
-    "\n",
-    "print ( D1 )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24aeb922",
+   "execution_count": 52,
+   "id": "59a1b844",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +235,7 @@
     "\n",
     "        # edit distance does not further increase if there is a match\n",
     "\n",
-    "            # aka, if matches, does not incur penalty\n",
+    "            # if matches, does not incur penalty\n",
     "\n",
     "        if x [ i - 1 ] == y [ j - 1 ] : \n",
     "\n",
@@ -230,11 +259,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59aa235d",
+   "cell_type": "markdown",
+   "id": "2efaf469",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Visualizing the new matrix with a numpy matrix, simply for a clean view. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "2a44af55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  0  0 ...  0  0  0]\n",
+      " [ 1  1  1 ...  1  0  0]\n",
+      " [ 2  2  2 ...  0  1  1]\n",
+      " ...\n",
+      " [14 13 12 ...  8  7  7]\n",
+      " [15 14 13 ...  7  8  8]\n",
+      " [16 15 14 ...  8  7  8]]\n"
+     ]
+    }
+   ],
    "source": [
     "D1 = np.matrix ( D )\n",
     "\n",
@@ -245,10 +296,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "28171974",
+   "execution_count": 51,
+   "id": "4ee9483f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# We are interested in the minimum value of the bottom row.\n",
     "\n",
@@ -256,25 +315,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c5bd5b0",
+   "cell_type": "markdown",
+   "id": "1fdd878a",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0354609d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "___\n",
+    "\n",
+    "### Conclusion \n",
+    "##### (Edit Distance) \n",
+    "\n",
+    "We see here that for the string given, as x = \"GATTTACCAGATTGAG\", and for y = reads, that the minimum number of changes required to match the two strings, x and y, is 2. \n",
+    "\n",
+    "                \n",
+    " "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b358fd98",
+   "id": "2ef1fcd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "53bee74d",
+   "id": "b55b11b3",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c2a3d142",
+   "id": "a1fed844",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2edd8f78",
+   "id": "9355a504",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "39b00cbc",
+   "id": "71c78027",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0d3b095d",
+   "id": "203899fd",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24437a24",
+   "id": "1b3c94b0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -537,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
