--- a/notes.ipynb
+++ b/notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3a1b6800",
+   "id": "9b6f3c4f",
    "metadata": {},
    "source": [
     "## |X| == |Y|\n",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f9ce341",
+   "id": "6f761d74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af0bc3e4",
+   "id": "92842176",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d0b941b",
+   "id": "ec527423",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dac14d9",
+   "id": "66ca962a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,15 +171,13 @@
     "                             distVer, \n",
     "                             distDiag )\n",
     "\n",
-    "    return D [ -1 ] [ -1 ]\n",
-    "\n",
-    "                "
+    "    return D [ -1 ] [ -1 ]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ec1df07",
+   "id": "21d63d03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11d18158",
+   "id": "da241f5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "180e6dfa",
+   "id": "c4130934",
    "metadata": {},
    "source": [
     "penalize the transversions more than transitions\n",
@@ -242,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "982726b3",
+   "id": "e60c3fb2",
    "metadata": {},
    "source": [
     "### lalign ( ax, by ) \n",
@@ -271,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78410d7b",
+   "id": "4384c7d5",
    "metadata": {},
    "source": [
     "Rows of the dynamic programming matrix are labeled with bases from P and columns with bases from T\n",
@@ -289,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ccecd7c",
+   "id": "f463e60c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cfc49b3",
+   "id": "c80c4072",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -332,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73326e68",
+   "id": "55f53f79",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -340,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6834a0d0",
+   "id": "dfeff987",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -362,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
